--- a/Hello/Hello.fsproj
+++ b/Hello/Hello.fsproj
@@ -38,6 +38,10 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.PowerPack">
+      <HintPath>..\packages\FSPowerPack.Core.Community.3.0.0.0\Lib\Net20\FSharp.PowerPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
@@ -50,6 +54,9 @@
     <None Include="App.config" />
     <None Include="1 - ThreeFiveMultipliers.fsx" />
     <None Include="2 - EvenFibonacci.fsx" />
+    <None Include="3 - LargertPrimeFactor.fsx" />
+    <None Include="4 - LargePalindromeProduct.fsx" />
+    <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
