--- a/Hello/packages.config
+++ b/Hello/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FSharp.Core" version="3.1.2.5" targetFramework="net35" />
   <package id="FSPowerPack.Core.Community" version="3.0.0.0" targetFramework="net35" />
+  <package id="MathNet.Numerics" version="3.9.0" targetFramework="net35" />
+  <package id="MathNet.Numerics.FSharp" version="3.9.0" targetFramework="net35" />
+  <package id="TaskParallelLibrary" version="1.0.2856.0" targetFramework="net35" />
 </packages>
